--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -2,10 +2,6 @@ h1 {
   text-align: center;
 }
 
-table {
-  margin: 0 auto;
-}
-
-table td {
-  border: 1px solid black;
+.center {
+  margin: 50px auto;
 }
