--- a/src/app/components/game-table/game-table.component.css
+++ b/src/app/components/game-table/game-table.component.css
@@ -1,9 +1,7 @@
-table {
-  margin: 0 auto;
-}
-
-table td {
-  border: 1px solid black;
-  width: 100px;
-  height: 100px;
+.grid {
+  display: grid;
+  grid-template-columns: repeat(3, 100px);
+  grid-template-rows: repeat(3, 100px);
+  grid-gap: 2px;
+  justify-content: center;
 }
